some fixes, catalog section mobile adaptation

--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -43,7 +43,23 @@
         margin: 0 auto
         &__inner
             width: 540px
-
+    .catalog
+        padding-bottom: 70px
+        &__tab
+            width: 170px
+            height: 40px
+            font-size: 16px
+            line-height: 40px
+            &:hover
+                box-shadow: 2px 2px 10px $main_color
+        &__content
+            justify-content: center
+        &-item
+            width: 280px
+            &:last-child:nth-child(2n+1)
+                width: 80%
+            .button_mini
+                width: 120px
 @media (max-width: 767px)
     .container
         max-width: 540px
@@ -93,6 +109,41 @@
         margin: 0 auto
         &__inner
             width: 430px
+    .catalog
+        padding-bottom: 40px
+        &__tabs
+            margin-top: 30px
+        &__tab
+            width: 150px
+            font-size: 14px
+        &__content
+            margin-top: 32px
+        &-item
+            width: 250px
+            min-height: 400px
+            &:last-child:nth-child(2n+1)
+                width: 250px
+            &__img
+                height: 180px
+            &__subtitle
+                margin-top: 10px
+            &__descr
+                font-size: 12px
+                margin-top: 6px
+            &__link
+                margin-top: 10px
+            hr
+                margin: 5px 0 8px 0
+            &__old-price
+                font-size: 12px
+            &__price
+                font-size: 18px
+            .button_mini
+                width: 100px
+            &__list
+                li
+                    margin-bottom: 12px
+                    font-size: 12px
 @media (max-width: 575px)
     .container
         max-width: none
@@ -163,7 +214,36 @@
             right: -20px
             img
                 width: 21px
-
+    .catalog
+        &__tabs
+            flex-direction: column
+            margin-top: 15px
+        &__tab
+            width: 280px
+            height: 35px
+            line-height: 35px
+            border: 1px solid #d0d0d0
+            border-bottom: none
+            transform: skewX(0)
+            &:last-child
+                border-bottom: 1px solid #d0d0d0
+            div
+                transform: skewX(0)
+            &:hover
+                box-shadow: none
+        &__content
+            margin-top: 22px
+        &-item
+            min-height: 320px
+            padding: 10px 10px 13px 10px
+            &__descr
+                display: none
+            img
+                height: 160px
+            &__list
+                li
+                    font-size: 11px
+                    margin-bottom: 8px
 @media (max-width: 380px)
     .header
         &__logo
