--- a/src/sass/blocks/_catalog.sass
+++ b/src/sass/blocks/_catalog.sass
@@ -21,7 +21,7 @@
         color: #6b6b6b
         margin: 0 5px
         cursor: pointer
-        transition: box-shadow 0.5s
+        transition: box-shadow 0.3s 
         &:hover
             border: none
             box-shadow: 3px 3px 20px $main_color
